--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/mc-funk/prime_solo_nd_01",
   "dependencies": {
     "bootstrap": "^3.3.4",
+    "connect-mongo": "^1.1.0",
     "express": "^4.12.3",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.0",
