--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "homepage": "https://github.com/mc-funk/prime_solo_nd_01",
   "dependencies": {
     "bootstrap": "^3.3.4",
+    "co": "^4.6.0",
+    "connect-mongo": "^1.1.0",
     "express": "^4.12.3",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-uglify": "^0.9.1",
-    "jquery": "^2.1.4"
+    "jquery": "^2.1.4",
+    "mongoose": "^4.3.6"
   }
 }
