--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/app.js"
   },
+  "engines": {
+    "node": "5.3.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/mc-funk/prime_solo_nd_01.git"
