--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "connect-mongo": "^1.1.0",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
+    "express-router": "0.0.1",
     "express-session": "^1.13.0",
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.8.0",
