--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^2.1.4",
     "methods": "^1.1.2",
     "mongoose": "^4.3.6",
+    "onep": "^0.4.1",
     "path": "^0.12.7"
   }
 }
